# rehearse

./: .gitignore  CLAUDE.md  LICENSE  README.md
e2e/: test_counter.py
sdk/: pyproject.toml
sdk/rehearse/: __init__.py  client.py  decorators.py  session.py
sdk/tests/: test_decorators.py
server/: package-lock.json  package.json
server/src/: app.ts  index.ts  types.ts
server/src/routes/: learn.ts  mutations.ts  queries.ts  sessions.ts
server/src/services/: agent.ts  elasticsearch.ts  memory.ts
server/tests/: agent.integration.test.ts  agent.test.ts  routes.test.ts
